Use Qurl::fromPercentEncoding for bookmarks

This will allow % in URLs; also sync test code with actual code.
Previously the tests were using toUtf8(); however fromPercentEncoding
seems better.

BUG: 420791
Differential Revision: https://phabricator.kde.org/D29322

(cherry picked from commit d3519ae24c0de218b3a2c0728fb4da519574044a)